# ai-irpd

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
plots/: functions.R  stage_1-replication-plots.R  stage_1r-replication-plots.R
src/: api.py  configs.yml  get.py  irpd.py  llm_configs.yml  logger.py  main.py  output_manager.py  output_processing.py  stage_outputs.py  test_config.py  utils.py
src/_types/: batch_output.py  irpd_config.py  irpd_meta.py  irpd_output.py  irpd_prompts.py  llm_config.py  meta_output.py  prompts.py  request_output.py  stage_output.py  stage_schemas.py  test_output.py
src/configs/: irpd.json  irpd_configs.yml  llm.json  llm_configs.yml  logger.json  prompt_composer.py
src/core/: base.py  config_manager.py  cross_model.py  data.py  foundation.py  functions.py  intra_model.py  irpd.py  irpd_model.py  irpd_models.py  irpd_prompts.py  llm_model.py  output_manager.py  output_processer.py  output_writer.py  prompt_composer.py  prompt_manager.py  sample_splitting.py  subtest.py  test.py  test_runner.py
src/helpers/: utils.py
src/irpd/: cross_model.py  intra_model.py  irpd_base.py  output_manager.py  sample_splitting.py  subtest.py  test.py  variability.py
src/llms/: __init__.py  anthropic_client.py  bedrock_client.py  claude.py  gemini.py  gpt.py  grok.py  llm_configs.json  mistral.py  model_configs.json  models.py  openai_client.py  vertexai_client.py
src/models/: __init__.py  anthropic_client.py  base_model.py  batch.py  batch_out.py  batch_output.py  claude.py  (+15 more)
tools/: plots.R  stage_1_plots.R  variability.py
(+172 files in other folders)
